# miniSAPserver-for-OpenWrt

./: README.md  sap.cfg
Binary for MIPS/: sapserver
init.d/: sapserver
minisapserver 0.3.8 - sources/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  aclocal.m4  broadcast.cpp  broadcast.h  config.h.in  configure  configure.ac  lslp.h  message.cpp  message.h  parser.cpp  parser.h  program.cpp  program.h
minisapserver 0.3.8 - sources/m4/: sockaddr.m4
